Correzioni app.component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,18 +5,8 @@
 </p>
 
 <app-my-button
-  [buttonConfig]="{
-customCssClass:'btn btn-primary',
-icon:'fa fa-home',
-text:'Home'
-}"
-></app-my-button>
+  [buttonConfig]="bottoneHome"></app-my-button>
 
 <br><br>
 <app-my-button
-  [buttonConfig]="{
-customCssClass:'btn btn-danger',
-icon:'fa fa-trash',
-text:'Elimina'
-}"
-></app-my-button>
+  [buttonConfig]="bottoneElimina"></app-my-button>
