--- a/src/app/components/my-table/my-table.component.html
+++ b/src/app/components/my-table/my-table.component.html
@@ -2,16 +2,16 @@
 
 
 <div class="container">
-  <table class="table table-striped">
+  <table class="table table-striped" >
     <thead>
     <tr>
       <ng-container *ngFor="let header of tableConfig.headers">
-        <th scope="col">{{header.label}}</th>
+        <th scope="col" (click)="sort(header.key)">{{header.label}}&nbsp;<i [ngClass]="orderType === 'asc' ? 'fa fa-sort-up' : 'fa fa-sort-down'"></i></th>
       </ng-container>
     </tr>
     </thead>
     <tbody>
-    <ng-container *ngFor="let object of data  ">
+    <ng-container *ngFor="let object of data | sortPipe : key:  orderType ">
       <tr>
 
         <td *ngFor="let header of tableConfig.headers">{{object[header.key]}}</td>
