--- a/src/app/components/my-table/my-table.component.html
+++ b/src/app/components/my-table/my-table.component.html
@@ -2,14 +2,14 @@
 
 
 <div class="container">
-  <table class="table table-striped"  >
+  <table class="table table-striped">
     <thead>
 
     <tr>
       <ng-container *ngFor="let header of tableConfig.headers">
-        <th scope="col" (click)="sort(header.key)">{{header.label}}&nbsp;<!--<i class="fa fa-sort" [ngClass]="orderType === 'asc' ? 'fa fa-sort-up' : 'fa fa-sort-down'"></i>-->
-          <i class="fa fa-sort"
-             *ngIf="!enable" disabled></i>
+        <th scope="col" (click)="sort(header.key)">{{header.label}}&nbsp;
+          <!--<i class="fa fa-sort" [ngClass]="orderType === 'asc' && !enable ? 'fa fa-sort-up' : 'fa fa-sort-down'"></i>-->
+          <i *ngIf="!enable" class="fa fa-sort"></i>
           <i *ngIf="orderType==='desc' && enable" class="fa fa-sort-up"></i>
           <i *ngIf="orderType==='asc' && enable" class="fa fa-sort-down"></i>
         </th>
