--- a/src/app/components/my-table/my-table.component.css
+++ b/src/app/components/my-table/my-table.component.css
@@ -3,3 +3,15 @@
   flex-direction: column;
   align-items: flex-start;
 }
+td {
+  height: 50px;
+  vertical-align: bottom;
+  padding-right: 20px;
+  text-align: left;
+  margin: auto;
+}
+th{
+  border: 1px solid;
+}
+
+
