--- a/src/app/components/my-table/my-table.component.html
+++ b/src/app/components/my-table/my-table.component.html
@@ -24,10 +24,10 @@
 
 
   <!--Tabella-->
-  <table class="table table-striped">
+  <table class="table table-bordered">
     <thead>
 
-    <tr>
+    <tr class="table-active">
       <ng-container *ngFor="let header of tableConfig.headers">
         <th scope="col" (click)="sort(header.key)">{{header.label}}&nbsp;
           <!--<i class="fa fa-sort" [ngClass]="orderType === 'asc' && !enable ? 'fa fa-sort-up' : 'fa fa-sort-down'"></i>-->
@@ -45,6 +45,7 @@
 
         <td *ngFor="let header of tableConfig.headers">{{object[header.key]}}</td>
         <!--<td *ngFor="let header of tableConfig.headers">{{getValue(header.key, object)}}</td> -->
+
       </tr>
 
     </ng-container>
