--- a/src/app/components/form-utente/form-utente.component.html
+++ b/src/app/components/form-utente/form-utente.component.html
@@ -1,4 +1,4 @@
-<br><br>
+<br xmlns="http://www.w3.org/1999/html"><br>
 <div class="container">
   <h2 *ngIf="utente">Modifica Utente</h2>
   <h2 *ngIf="!utente">Crea Utente</h2>
@@ -10,6 +10,9 @@
         <div class="input-group form-group">
           <label for="nome">Nome:</label>
           <input type="text" id="nome" class="form-control" formControlName="nome" required>
+
+
+
         </div>
         <div class="input-group form-group">
           <label for="cognome">Cognome:</label>
@@ -26,14 +29,18 @@
 
         <div class="col-md-2">
           <div *ngIf="utente">
-            <button type="submit" class="btn btn-primary">Modifica</button>
+            <input type="submit" class="btn btn-primary" value="Modifica"/>
           </div>
           <div *ngIf="!utente">
-            <button type="submit" class="btn btn-primary">Crea</button>
+            <input type="submit" class="btn btn-primary" value="Crea" />
           </div>
+
+          <input type="button" class="btn btn-secondary" [routerLink]="['']" value="Indietro"/>
+
         </div>
       </form>
 
     </div>
+
   </div>
 </div>
