--- a/src/app/components/form-utente/form-utente.component.html
+++ b/src/app/components/form-utente/form-utente.component.html
@@ -10,24 +10,24 @@
         <div class="input-group form-group">
           <label for="nome">Nome:</label>
           <input type="text" id="nome" class="form-control" formControlName="nome" required>
-
-
-
         </div>
+
         <div class="input-group form-group">
           <label for="cognome">Cognome:</label>
           <input type="text" id="cognome" class="form-control" formControlName="cognome" required>
         </div>
+
         <div class="input-group form-group">
           <label for="email">Email:</label>
           <input type="text" id="email" class="form-control" formControlName="email" required>
         </div>
+
         <div class="input-group form-group">
           <label for="eta">Età:</label>
           <input type="number" id="eta" class="form-control" formControlName="eta" required>
         </div>
 
-        <div class="col-md-2">
+        <div class="input-group form-group">
           <div *ngIf="utente">
             <input type="submit" class="btn btn-primary" value="Modifica"/>
           </div>
