--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
 <app-my-table
   [tableConfig]="headersTable"
   [data]="data"
-  (Action)="getAction($event.action, $event.id)"
+  (Action)="getAction($event.action, $event.object)"
 >
 </app-my-table>
 
