Primo commit RentalCarAngular

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!--
 <p>
   <mat-toolbar color="primary">
     <span>{{title}}</span>
@@ -24,3 +25,7 @@
 </app-my-table>
 
 
+-->
+<app-nav-bar></app-nav-bar>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
