prova getVeicoli ok

--- a/src/app/components/veicoli/veicoli.component.html
+++ b/src/app/components/veicoli/veicoli.component.html
@@ -4,7 +4,7 @@
 <br><br>
 <app-my-table
   [tableConfig]="headersTable"
-  [data]="data"
+  [data]="veicoli"
   (emitter)="getAction($event.action, $event.object)"
 >
 </app-my-table>
