--- a/src/app/components/forms/form-utente/form-utente.component.html
+++ b/src/app/components/forms/form-utente/form-utente.component.html
@@ -1,41 +1,51 @@
 <br xmlns="http://www.w3.org/1999/html"><br>
 <div class="container">
-  <h2 *ngIf="utente">Modifica Utente</h2>
-  <h2 *ngIf="!utente">Crea Utente</h2>
+  <h2 *ngIf="utenteIdFromRoute!=0">Modifica Utente</h2>
+  <h2 *ngIf="utenteIdFromRoute===0">Crea Utente</h2>
 
   <div class="form-inline">
     <div>
-      <form [formGroup]="editForm" (ngSubmit)="saveOrUpdateUtente(utente? utente.id : 0)">
+      <form #form="ngForm" (ngSubmit)="saveOrUpdateUtente()">
 
         <div class="input-group form-group">
           <label for="nome">Nome:</label>
-          <input type="text" id="nome" class="form-control" formControlName="nome" required>
+          <input type="text" id="nome" name="nome"  class="form-control" [(ngModel)]="utente.nome" ngModel required>
         </div>
 
         <div class="input-group form-group">
           <label for="cognome">Cognome:</label>
-          <input type="text" id="cognome" class="form-control" formControlName="cognome" required>
+          <input type="text" id="cognome" class="form-control" name="cognome" [(ngModel)]="utente.cognome" ngModel required>
         </div>
 
         <div class="input-group form-group">
           <label for="email">Email:</label>
-          <input type="text" id="email" class="form-control" formControlName="email" required>
+          <input type="email" id="email" class="form-control" name="email" [(ngModel)]="utente.email" ngModel required>
         </div>
 
         <div class="input-group form-group">
-          <label for="eta">Età:</label>
-          <input type="number" id="eta" class="form-control" formControlName="eta" required>
+          <label for="dataNacita">Data di Nascita:</label>
+          <input type="date" id="dataNacita" class="form-control" name="dataNascita" [(ngModel)]="utente.dataNascita" ngModel required>
         </div>
 
         <div class="input-group form-group">
-          <div *ngIf="utente">
-            <input type="submit" class="btn btn-primary" value="Modifica"/>
+          <label for="username">Username:</label>
+          <input type="text" id="username" class="form-control" name="username" [(ngModel)]="utente.username" ngModel required>
+        </div>
+
+        <div class="input-group form-group">
+          <label for="password">Password:</label>
+          <input type="password" id="password" class="form-control" name="password" [(ngModel)]="utente.password" ngModel required>
+        </div>
+
+        <div class="input-group form-group">
+          <div *ngIf="utenteIdFromRoute!=0">
+            <button type="submit" class="btn btn-primary" [disabled]="!form.valid">Modifica</button>
           </div>
-          <div *ngIf="!utente">
-            <input type="submit" class="btn btn-primary" value="Crea" />
+          <div *ngIf="utenteIdFromRoute===0">
+            <button type="submit" class="btn btn-primary" [disabled]="!form.valid">Crea</button>
           </div>
 
-          <input type="button" class="btn btn-secondary" [routerLink]="['']" value="Indietro"/>
+          <button type="button" class="btn btn-secondary" [routerLink]="['/utenti']" value="Indietro">Indietro</button>
 
         </div>
       </form>
