--- a/src/app/components/forms/form-veicolo/form-veicolo.component.html
+++ b/src/app/components/forms/form-veicolo/form-veicolo.component.html
@@ -6,7 +6,7 @@
   <div class="form-inline">
     <div>
 
-      <form #form="ngForm" (ngSubmit)="saveOrUpdateUtente()">
+      <form #form="ngForm" (ngSubmit)="saveOrUpdateVeicolo()">
         <div class="input-group form-group">
           <label for="casaCostruttrice">Casa Costruttrice:</label>
           <input type="text" id="casaCostruttrice" name="casaCostruttrice" class="form-control"
