--- a/src/app/components/template/nav-bar/nav-bar.component.html
+++ b/src/app/components/template/nav-bar/nav-bar.component.html
@@ -16,7 +16,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#"> Profilo </a>
+          <a class="nav-link" [routerLink]="['utenti']"> Profilo </a>
         </li>
 
         <li class="nav-item">
