--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -9,7 +9,7 @@
 
       <p class="lead">Effettua il login o registrati </p>
 
-      <a href="#" id="Accedi" class="btn btn-primary btn-lg"> Accedi </a>&nbsp;
+      <a [routerLink]="['login']" id="Accedi" class="btn btn-primary btn-lg"> Accedi </a>&nbsp;
 
       <a href="#" id="Registrati" class="btn btn-secondary btn-lg"> Registrati</a>
 
