--- a/src/app/components/template/nav-bar/nav-bar.component.html
+++ b/src/app/components/template/nav-bar/nav-bar.component.html
@@ -20,7 +20,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#"> Login </a>
+          <a class="nav-link" [routerLink]="['login']"> Login </a>
         </li>
 
 
