--- a/src/app/components/forms/form-prenotazione/form-prenotazione.component.css
+++ b/src/app/components/forms/form-prenotazione/form-prenotazione.component.css
@@ -66,3 +66,11 @@ body .btn-danger:hover {
   border-color: #f63240;
   color: #fff;
 }
+
+.ng-valid[required], .ng-valid.required  {
+  border-left: 5px solid #42A948; /* green */
+}
+
+.ng-invalid:not(form)  {
+  border-left: 5px solid #a94442; /* red */
+}
