--- a/src/app/components/forms/form-prenotazione/form-prenotazione.component.html
+++ b/src/app/components/forms/form-prenotazione/form-prenotazione.component.html
@@ -7,7 +7,7 @@
     <div>
       <form #form="ngForm" (ngSubmit)="saveOrUpdatePrenotazione()">
 
-
+        <input type="hidden" id="utente" class="form-control" name="utente" [(ngModel)]="prenotazione.utente"  ngModel required>
 
         <div class="input-group form-group">
           <label for="dataInizio">Data di Inizio Prenotazione:</label>
