--- a/src/app/components/forms/form-prenotazione/form-prenotazione.component.html
+++ b/src/app/components/forms/form-prenotazione/form-prenotazione.component.html
@@ -1,22 +1,33 @@
 <br xmlns="http://www.w3.org/1999/html"><br>
 <div class="container">
-  <h2 *ngIf="prenotazioneIdFromRoute!=0">Modifica Prenotazione per l'utente Id: {{prenotazione.utente}}</h2>
+  <h2 *ngIf="prenotazioneIdFromRoute!=0">Modifica Prenotazione per l'utente Id: {{prenotazione.utenteId}}</h2>
   <h2 *ngIf="prenotazioneIdFromRoute===0">Crea Prenotazione</h2>
 
   <div class="form-inline">
     <div>
       <form #form="ngForm" (ngSubmit)="saveOrUpdatePrenotazione()">
 
-        <input type="hidden" id="utente" class="form-control" name="utente" [(ngModel)]="prenotazione.utente"  ngModel required>
+        <input type="hidden" id="utente" class="form-control" name="utente" [(ngModel)]="prenotazione.utente"
+               ngModel required>
 
         <div class="input-group form-group">
           <label for="dataInizio">Data di Inizio Prenotazione:</label>
-          <input type="date" id="dataInizio" class="form-control" name="dataInizio" [(ngModel)]="prenotazione.dataInizio" ngModel required>
+          <input type="date" id="dataInizio" class="form-control" name="dataInizio"
+                 [(ngModel)]="prenotazione.dataInizio" #dataInizio="ngModel" required >
         </div>
 
         <div class="input-group form-group">
           <label for="dataFine">Data di Fine Prenotazione:</label>
-          <input type="date" id="dataFine" class="form-control" name="dataFine" [(ngModel)]="prenotazione.dataFine" ngModel required>
+          <input type="date" id="dataFine" class="form-control" name="dataFine" [(ngModel)]="prenotazione.dataFine"
+                 ngModel required>
+        </div>
+
+        <div *ngIf="prenotazione.dataInizio >= prenotazione.dataFine"
+             class="alert">
+          <div>
+            La data di inizio non può essere antecedente a quella di fine Prenotazione!
+          </div>
+
         </div>
 
         <div class="input-group form-group">
@@ -24,7 +35,8 @@
           <select class="form-control" name="veicolo" id="veicolo"
                   ngModel required
                   [(ngModel)]="prenotazione.veicolo" name="veicolo">
-            <option *ngFor="let tipo of veicoli" [value]="tipo.id" [label]="tipo.casaCostruttrice + tipo.modello"></option>
+            <option *ngFor="let tipo of veicoli" [value]="tipo.id"
+                    [label]="tipo.casaCostruttrice + tipo.modello"></option>
           </select>
         </div>
 
@@ -34,19 +46,20 @@
                   ngModel required
                   [(ngModel)]="prenotazione.approvazione" name="approvazione">
             <option [value]="true">Approvata</option>
-            <option [value]="false" >Non approvata</option>
+            <option [value]="false">Non approvata</option>
           </select>
         </div>
 
         <div class="input-group form-group">
           <div *ngIf="prenotazioneIdFromRoute!=0">
-            <button type="submit" class="btn btn-primary" [disabled]="!form.valid">Modifica</button>
+            <button type="submit" class="btn btn-primary" [disabled]="!form.valid && !dataInizio.errors">Modifica</button>
           </div>
           <div *ngIf="prenotazioneIdFromRoute===0">
             <button type="submit" class="btn btn-primary" [disabled]="!form.valid">Crea</button>
           </div>
 
-          <button type="button" class="btn btn-secondary" [routerLink]="['/prenotazioni']" value="Indietro">Indietro</button>
+          <button type="button" class="btn btn-secondary" [routerLink]="['/prenotazioni']" value="Indietro">Indietro
+          </button>
 
         </div>
       </form>
