--- a/src/app/components/forms/form-prenotazione/form-prenotazione.component.html
+++ b/src/app/components/forms/form-prenotazione/form-prenotazione.component.html
@@ -13,13 +13,13 @@
         <div class="input-group form-group">
           <label for="dataInizio">Data di Inizio Prenotazione:</label>
           <input type="date" id="dataInizio" class="form-control" name="dataInizio"
-                 [(ngModel)]="prenotazione.dataInizio" #dataInizio="ngModel" required >
+                 [(ngModel)]="prenotazione.dataInizio" #dataInizio="ngModel" required [min]="prenotazione.dataFine">
         </div>
 
         <div class="input-group form-group">
           <label for="dataFine">Data di Fine Prenotazione:</label>
           <input type="date" id="dataFine" class="form-control" name="dataFine" [(ngModel)]="prenotazione.dataFine"
-                 ngModel required>
+                 ngModel required [min]="prenotazione.dataInizio">
         </div>
 
         <div *ngIf="prenotazione.dataInizio >= prenotazione.dataFine"
