--- a/src/app/components/profilo-customer/profilo-customer.component.html
+++ b/src/app/components/profilo-customer/profilo-customer.component.html
@@ -1,6 +1,7 @@
 
 <router-outlet></router-outlet>
 <br><br>
+<h2>Bentornato {{customer.nome}} {{customer.cognome}}</h2>
 <app-my-table
   [tableConfig]="headersTable"
   [data]="prenotazioniUtente"
