Autenticazione base Admin

--- a/src/app/components/template/nav-bar/nav-bar.component.html
+++ b/src/app/components/template/nav-bar/nav-bar.component.html
@@ -19,8 +19,18 @@
           <a class="nav-link" [routerLink]="['utenti']"> Profilo </a>
         </li>
 
-        <li class="nav-item">
+        <!--<li class="nav-item">
           <a class="nav-link" [routerLink]="['login']"> Login </a>
+        </li>-->
+
+        <li class="nav-item">
+          <div *ngIf="isUserLoggedIn; else isLogOut">
+            <a class="nav-link" routerLink="/logout">Logout</a>
+          </div>
+
+          <ng-template #isLogOut>
+            <a class="nav-link" routerLink="/login">Login</a>
+          </ng-template>
         </li>
 
 
